--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-# Disable LF normalization for all files
-* -text
+* text=auto eol=lf
 .gitattributes export-ignore
 .gitignore export-ignore
+.editorconfig export-ignore
