--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,6 @@
-# https://editorconfig.org
-# This file is for unifying the coding style for different editors and IDEs
-# editorconfig.org
+# EditorConfig is awesome: https://EditorConfig.org
 
-# PHP PSR-2 Coding Standards
-# https://www.php-fig.org/psr/psr-2/
-
+# top-most EditorConfig file
 root = true
 
 [*]
@@ -15,34 +11,30 @@ charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = true
 
-[*.php]
-charset = utf-8
-end_of_line = lf
+[*.php, *.php.sample]
+trim_trailing_whitespace = true
+
+[*.html.php]
+indent_size = 2
 indent_style = space
-indent_size = 4
-insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.js]
-charset = utf-8
-end_of_line = lf
 indent_size = 2
-indent_style = space
-insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.css]
-charset = utf-8
-end_of_line = lf
 indent_size = 2
-indent_style = space
-insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.scss]
+indent_size = 2
+trim_trailing_whitespace = true
+
+[*.json]
+indent_size = 2
 trim_trailing_whitespace = true
 
 [*.md]
-charset = utf-8
-end_of_line = lf
 indent_size = 2
-indent_style = space
-insert_final_newline = true
 trim_trailing_whitespace = true
