--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,5 @@
 # EditorConfig is awesome: https://EditorConfig.org
 
-# top-most EditorConfig file
 root = true
 
 [*]
@@ -11,30 +10,8 @@ charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = true
 
-[*.php, *.php.sample]
+[*.{php,php.sample,html.php,js,css,scss,json,md}]
 trim_trailing_whitespace = true
 
-[*.html.php]
+[*.{html,html.php,js,css,scss,json,md}]
 indent_size = 2
-indent_style = space
-trim_trailing_whitespace = true
-
-[*.js]
-indent_size = 2
-trim_trailing_whitespace = true
-
-[*.css]
-indent_size = 2
-trim_trailing_whitespace = true
-
-[*.scss]
-indent_size = 2
-trim_trailing_whitespace = true
-
-[*.json]
-indent_size = 2
-trim_trailing_whitespace = true
-
-[*.md]
-indent_size = 2
-trim_trailing_whitespace = true
