Restrict web access to temp logs

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .thumbs/
 /temp/cache/*
 /temp/*
+!/temp/.htaccess
 
 # gitは空のディレクトリを管理しないため、空のディレクトリを同期したい場合は、
 # このファイルが存在するディレクトリに.gitkeepという名前の空ファイルを作成してください
